--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Location permissions (added once only) -->
+    <!-- INTERNET + NETWORK -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <!-- CAMERA (Face Scan) -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <!-- LOCATION (عندك أصلاً) -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:label="hos_app"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true">
 
         <activity
             android:name=".MainActivity"
@@ -35,11 +43,21 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <!-- Google Maps API KEY -->
+        <!-- Google Maps API KEY (الصحيح) -->
         <meta-data
-            android:name="com.google.android.geo.AIzaSyByZudNT1_WMiriRynXuofQvqIlab4m_xM"
-            android:value="YOUR_GOOGLE_MAPS_API_KEY" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCM5lHu7WCAKSAfvAn7lY_7PJj0YWY7kHE" />
 
+        <meta-data
+            android:name="flutter.camera.useAndroidXCamera"
+            android:value="true"/>
+
+
+
+        <!-- Network Security Config -->
+        <meta-data
+            android:name="android.security.net.config"
+            android:resource="@xml/network_security_config"/>
     </application>
 
     <!-- Needed for Flutter text plugin -->
