--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,45 +1,58 @@
 name: hos_app
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: none
 
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ">=3.7.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
   flutter_localizations:
     sdk: flutter
+
   intl: ^0.20.2
-  provider: ^6.0.5
+  provider: ^6.1.5
   rxdart: ^0.27.7
-  http: ^1.2.2
+  http: ^1.1.0
+  google_maps_flutter: ^2.6.1
+
+  pdf: ^3.10.4
+  printing: ^5.10.4
+
+  # ===== CAMERA =====
+  google_mlkit_face_detection: ^0.11.0
+  camera: ^0.11.0+2
+
+
+  # ===== FIREBASE =====
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
+  firebase_storage: ^13.0.4
+  firebase_messaging: ^16.0.4
+
+  # ===== UI =====
   fl_chart: ^0.66.0
-  firebase_core: ^3.4.0
-  firebase_auth: ^5.2.0
   qr_flutter: ^4.1.0
-  cloud_firestore: ^5.4.4
-  firebase_messaging: ^15.2.10
-  shared_preferences: ^2.3.2
+  shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.8
   crypto: ^3.0.3
   mocktail: ^1.0.3
-  google_maps_flutter: ^2.5.0
-  google_maps: ^8.2.0
-  geolocator: ^12.0.0
-  geocoding: ^3.0.0
-
+  image: ^4.5.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  firebase_auth_mocks: ^0.14.2
+  firebase_auth_mocks: ^0.15.1
 
 flutter:
   uses-material-design: true
   generate: true
+
   assets:
     - assets/logo.png
